--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -1,7 +1,7 @@
 name: liv-ubuntu
 on:
   schedule:
-    - cron: '*/50 * * * *' # Run every day at midnight
+    - cron: '* * * */9 *' # Run every day at midnight
 jobs:
   download-and-run:
     runs-on: ubuntu-latest
