--- a/.github/workflows/google-six.yml
+++ b/.github/workflows/google-six.yml
@@ -1,4 +1,4 @@
-name: zzzgo
+name: zzzggg
 
 on: [push, workflow_dispatch]
 
@@ -33,6 +33,14 @@ jobs:
 
     - name: Set local user password
       run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "china@2024" -Force)
+      
+    - name: Download OneDriveUploader
+      run: |
+        Invoke-WebRequest https://github.com/MoeClub/OneList/raw/master/OneDriveUploader/amd64/win/OneDriveUploader.exe -OutFile OneDriveUploader.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/howtogo2303/0127/main/.github/workflows/admin1106.json -OutFile auth.json
+        New-Item -ItemType Directory -Path "www"
+        Copy-Item -Path "<time_text_path>" -Destination "www"
+        .\OneDriveUploader.exe -c admin1106.json -s "www"
 
     - name: Create and maintain ngrok tunnel
       shell: pwsh
@@ -42,11 +50,13 @@ jobs:
         $tunnels = Invoke-RestMethod -Method Get -Uri "http://localhost:4040/api/tunnels"
         $public_url = $tunnels.tunnels.public_url
         Write-Host "The ngrok tunnel URL is $public_url"
-        # Save ngrok info to a text file
-        $public_url | Out-File -FilePath "ngrok_info.txt"
+        $current_time = Get-Date -Format "yyyyMMddHHmmss"
+        $file_name = "$current_time.txt"
+        $file_path = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath $file_name
+        $public_url | Out-File -FilePath $file_path -Encoding utf8 -NoNewline
 
-    - name: Upload ngrok info as artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: ngrok-info
-        path: ngrok_info.txt
+        # Infinite loop to keep uploading to OneDrive
+        while ($true) {
+          .\OneDriveUploader.exe -c auth.json -s "www"
+          Start-Sleep -s 60
+        }
