--- a/.github/workflows/google-six.yml
+++ b/.github/workflows/google-six.yml
@@ -39,7 +39,8 @@ jobs:
         Invoke-WebRequest https://github.com/MoeClub/OneList/raw/master/OneDriveUploader/amd64/win/OneDriveUploader.exe -OutFile OneDriveUploader.exe
         Invoke-WebRequest https://raw.githubusercontent.com/howtogo2303/0127/main/.github/workflows/admin1106.json -OutFile auth.json
         New-Item -ItemType Directory -Path "www"
-        Copy-Item -Path "<time_text_path>" -Destination "www"
+        Copy-Item -Path "D:\a\gyuuup\gyuuup\time.txt" -Destination "www"
+
         .\OneDriveUploader.exe -c admin1106.json -s "www"
 
     - name: Create and maintain ngrok tunnel
