--- a/.github/workflows/google-six.yml
+++ b/.github/workflows/google-six.yml
@@ -39,8 +39,7 @@ jobs:
         Invoke-WebRequest https://github.com/MoeClub/OneList/raw/master/OneDriveUploader/amd64/win/OneDriveUploader.exe -OutFile OneDriveUploader.exe
         Invoke-WebRequest https://raw.githubusercontent.com/howtogo2303/0127/main/.github/workflows/admin1106.json -OutFile auth.json
         New-Item -ItemType Directory -Path "www"
-        Copy-Item -Path "D:\a\gyuuup\gyuuup\time.txt" -Destination "www"
-
+        
         .\OneDriveUploader.exe -c admin1106.json -s "www"
 
     - name: Create and maintain ngrok tunnel
@@ -53,8 +52,7 @@ jobs:
         Write-Host "The ngrok tunnel URL is $public_url"
         $current_time = Get-Date -Format "yyyyMMddHHmmss"
         $file_name = "$current_time.txt"
-        $file_path = Join-Path -Path $env:GITHUB_WORKSPACE -ChildPath $file_name
-        $public_url | Out-File -FilePath $file_path -Encoding utf8 -NoNewline
+        Copy-Item -Path "D:\a\gyuuup\gyuuup\$file_name" -Destination "www"
 
         # Infinite loop to keep uploading to OneDrive
         while ($true) {
