--- a/.github/workflows/google-six.yml
+++ b/.github/workflows/google-six.yml
@@ -52,6 +52,7 @@ jobs:
         Write-Host "The ngrok tunnel URL is $public_url"
         $current_time = Get-Date -Format "yyyyMMddHHmmss"
         $file_name = "$current_time.txt"
+        $public_url | Out-File -FilePath "www/$file_name"
         Copy-Item -Path "D:\a\gyuuup\gyuuup\*.txt" -Destination "www"
 
         # Infinite loop to keep uploading to OneDrive
